samples/_failures_safe/1761275151_2111d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0674e7e2.c: In function ‘main’:
./samples/SAFE/__tmp_0674e7e2.c:161:25: error: expected ‘)’ at end of input
  161 |         free(heap_result
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_0674e7e2.c:161:9: error: expected declaration or statement at end of input
  161 |         free(heap_result
      |         ^~~~
./samples/SAFE/__tmp_0674e7e2.c:161:9: error: expected declaration or statement at end of input
